--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,7 @@
   
   "web_accessible_resources": [
     {
-      "resources": ["icons/*"],
+      "resources": ["icons/*", "lib/*"],
       "matches": ["<all_urls>"]
     }
   ]
